Margin has been set to a decent value for avoiding overlapping of different sections

--- a/style.css
+++ b/style.css
@@ -935,6 +935,7 @@ a:focus {
 .portfolio {
   position: relative;
   padding: 45px 0 15px 0;
+  margin-bottom: 5%;
 }
 
 .portfolio #portfolio-filter {
